# nocheat

./: .gitattributes  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build-all.sh  cbindgen.toml  docker-build.sh  rust-analyzer.json
.github/workflows/: cross-build.yml  release.yml  rust-test.yml
benches/: benchmark.rs
docs/: generic_json_samples.md  generic_usage.md  implementation_plan.md
examples/: fps_game_analysis.rs  generic_usage.rs  multi_game_analysis.rs  train_model_example.rs
examples/json_samples/: analysis_response.json  battle_royale_training_data.json  fps_training_data.json  moba_training_data.json  multi_player_round.json  player_stats_schema.json  racing_training_data.json  rts_training_data.json  single_player_stats.json  sports_training_data.json  training_data.json
examples/ue_plugin/: NoCheat.uplugin
examples/ue_plugin/Source/NoCheat/: NoCheat.Build.cs
examples/ue_plugin/Source/NoCheat/Private/: NoCheat.cpp  NoCheatManager.cpp
examples/ue_plugin/Source/NoCheat/Public/: NoCheat.h  NoCheatManager.h
src/: lib.rs  types.rs
tests/: analisys_test.rs
