[package]
name = "nocheat"
version = "0.1.0"
edition = "2021"

[lib]
name = "nocheat"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
libc        = "0.2"
anyhow      = "1.0"
polars      = { version = "0.37", features = ["lazy", "temporal"] }
ndarray     = "0.15"
randomforest= "0.1.6"
bincode     = "1.3"
once_cell   = "1.17"

[dev-dependencies]
criterion    = "0.4"
